[LJI-13] Rewrite tests, minor improvements.